--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: lodge-management
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: gunicorn app:app --timeout 120 --workers 2 --threads 4 --preload
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
