--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==2.0.1
-firebase-admin==6.1.0
-gunicorn==20.1.0
-pytz==2021.3
-Werkzeug==2.0.1
+Flask==3.0.0
+firebase-admin==6.3.0
+gunicorn==21.2.0
+Werkzeug==3.0.1
+pytz==2024.1
+Pillow==10.1.0
