--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,21 +1,47 @@
 steps:
+  # Step 1: Build the Docker image
   - name: "gcr.io/cloud-builders/docker"
     args:
       - "build"
       - "-t"
       - "gcr.io/$PROJECT_ID/lodge-management:latest"
+      - "-t"
+      - "gcr.io/$PROJECT_ID/lodge-management:$SHORT_SHA"
       - "."
+    id: "build"
+
+  # Step 2: Push to Container Registry
   - name: "gcr.io/cloud-builders/docker"
     args:
       - "push"
-      - "gcr.io/$PROJECT_ID/lodge-management:latest"
+      - "gcr.io/$PROJECT_ID/lodge-management"
+    id: "push"
+
+  # Step 3: Deploy to Cloud Run (WITHOUT --base-image - FIXED!)
   - name: "gcr.io/cloud-builders/run"
     args:
       - "deploy"
       - "lodge-management"
       - "--image"
-      - "gcr.io/$PROJECT_ID/lodge-management:latest"
+      - "gcr.io/$PROJECT_ID/lodge-management:$SHORT_SHA"
       - "--region"
       - "us-central1"
       - "--platform"
       - "managed"
+      - "--allow-unauthenticated"
+      - "--set-env-vars"
+      - "FIREBASE_CREDENTIALS=${_FIREBASE_CREDENTIALS},FIREBASE_STORAGE_BUCKET=${_FIREBASE_STORAGE_BUCKET}"
+    id: "deploy"
+
+# Timeout
+timeout: "1800s"
+
+# Build images to push
+images:
+  - "gcr.io/$PROJECT_ID/lodge-management:latest"
+  - "gcr.io/$PROJECT_ID/lodge-management:$SHORT_SHA"
+
+# Substitutions for environment variables
+substitutions:
+  _FIREBASE_CREDENTIALS: ""
+  _FIREBASE_STORAGE_BUCKET: ""
