--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,55 +1,59 @@
-# ========================================================
-# Cloud Build configuration for Cloud Run (Docker)
-# ========================================================
-
 steps:
-  # Step 1: Build Docker image
+  # Step 1: Build the container using Dockerfile
   - name: "gcr.io/cloud-builders/docker"
     args:
       - "build"
-      - "--no-cache"
+      - "-t"
+      - "gcr.io/$PROJECT_ID/lodge-management:$COMMIT_SHA"
       - "-t"
       - "gcr.io/$PROJECT_ID/lodge-management:latest"
-      - "-t"
-      - "gcr.io/$PROJECT_ID/lodge-management:${_TAG}"
       - "."
+    id: "build-image"
 
-  # Step 2: Push both tags to Container Registry
+  # Step 2: Push the container to Container Registry
   - name: "gcr.io/cloud-builders/docker"
-    entrypoint: bash
+    args:
+      - "push"
+      - "gcr.io/$PROJECT_ID/lodge-management:$COMMIT_SHA"
+    id: "push-image"
+
+  # Step 3: Deploy to Cloud Run
+  - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
+    entrypoint: "bash"
     args:
       - "-c"
       - |
-        docker push gcr.io/$PROJECT_ID/lodge-management:latest
-        docker push gcr.io/$PROJECT_ID/lodge-management:${_TAG}
+        gcloud run deploy lodge-management \
+          --image=gcr.io/$PROJECT_ID/lodge-management:$COMMIT_SHA \
+          --region=asia-south1 \
+          --platform=managed \
+          --allow-unauthenticated \
+          --memory=512Mi \
+          --cpu=1 \
+          --timeout=300 \
+          --max-instances=10 \
+          --min-instances=0 \
+          --set-env-vars FIREBASE_CREDENTIALS="$$FIREBASE_CREDS" \
+          --set-env-vars FIREBASE_STORAGE_BUCKET="$$FIREBASE_BUCKET"
+    secretEnv: ["FIREBASE_CREDS", "FIREBASE_BUCKET"]
+    id: "deploy-to-cloud-run"
 
-  # Step 3: Deploy to Cloud Run
-  - name: "gcr.io/google.com/cloudsdktool/cloud-sdk:slim"
-    entrypoint: gcloud
-    args:
-      - "run"
-      - "deploy"
-      - "lodge-management"
-      - "--image"
-      - "gcr.io/$PROJECT_ID/lodge-management:${_TAG}"
-      - "--region"
-      - "us-central1"
-      - "--platform"
-      - "managed"
-      - "--allow-unauthenticated"
-      - "--set-env-vars"
-      - "FIREBASE_CREDENTIALS=${_FIREBASE_CREDENTIALS},FIREBASE_STORAGE_BUCKET=${_FIREBASE_STORAGE_BUCKET}"
+# Access secrets from Secret Manager
+availableSecrets:
+  secretManager:
+    - versionName: projects/$PROJECT_ID/secrets/firebase-credentials/versions/latest
+      env: "FIREBASE_CREDS"
+    - versionName: projects/$PROJECT_ID/secrets/firebase-storage-bucket/versions/latest
+      env: "FIREBASE_BUCKET"
 
-# ========================================================
-# Global Settings
-# ========================================================
-timeout: "1800s"
-
-substitutions:
-  _TAG: "local" # Default tag for manual builds
-  _FIREBASE_CREDENTIALS: ""
-  _FIREBASE_STORAGE_BUCKET: ""
-
+# Store the built images
 images:
-  - "gcr.io/$PROJECT_ID/lodge-management:${_TAG}"
+  - "gcr.io/$PROJECT_ID/lodge-management:$COMMIT_SHA"
   - "gcr.io/$PROJECT_ID/lodge-management:latest"
+
+# Build options
+options:
+  logging: CLOUD_LOGGING_ONLY
+  machineType: "E2_HIGHCPU_8"
+
+timeout: "1200s" # 20 minutes max
