--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-Flask==2.3.3
-firebase-admin==6.1.0
-python-dotenv==1.0.0
+flask==3.0.0
+firebase-admin==6.3.0
+pytz==2024.1
+werkzeug==3.0.1
 gunicorn==21.2.0
-pytz==2023.3
-Werkzeug==2.3.7
