--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -33,8 +33,7 @@ steps:
           --timeout=300 \
           --max-instances=10 \
           --min-instances=0 \
-          --set-env-vars FIREBASE_CREDENTIALS="$$FIREBASE_CREDS" \
-          --set-env-vars FIREBASE_STORAGE_BUCKET="$$FIREBASE_BUCKET"
+          --set-env-vars FIREBASE_CREDENTIALS="$$FIREBASE_CREDS",FIREBASE_STORAGE_BUCKET="$$FIREBASE_BUCKET"
     secretEnv: ["FIREBASE_CREDS", "FIREBASE_BUCKET"]
     id: "deploy-to-cloud-run"
 
@@ -56,4 +55,4 @@ options:
   logging: CLOUD_LOGGING_ONLY
   machineType: "E2_HIGHCPU_8"
 
-timeout: "1200s" # 20 minutes max
+timeout: "1200s"
