--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,36 +8,27 @@ steps:
       - "-t"
       - "gcr.io/$PROJECT_ID/lodge-management:latest"
       - "."
-    id: "build-image"
 
   # Step 2: Push the container to Container Registry
   - name: "gcr.io/cloud-builders/docker"
     args:
       - "push"
       - "gcr.io/$PROJECT_ID/lodge-management:$COMMIT_SHA"
-    id: "push-image"
 
-  # Step 3: Deploy to Cloud Run
-  - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
-    entrypoint: "bash"
+  # Step 3: Deploy to Cloud Run (with --clear-base-image flag)
+  - name: "gcr.io/cloud-builders/gcloud"
     args:
-      - "-c"
-      - |
-        gcloud run deploy lodge-management \
-          --image=gcr.io/$PROJECT_ID/lodge-management:$COMMIT_SHA \
-          --region=asia-south1 \
-          --platform=managed \
-          --allow-unauthenticated \
-          --memory=512Mi \
-          --cpu=1 \
-          --timeout=300 \
-          --max-instances=10 \
-          --min-instances=0 \
-          --set-env-vars FIREBASE_CREDENTIALS="$$FIREBASE_CREDS",FIREBASE_STORAGE_BUCKET="$$FIREBASE_BUCKET"
+      - "run"
+      - "deploy"
+      - "lodge-management"
+      - "--image=gcr.io/$PROJECT_ID/lodge-management:$COMMIT_SHA"
+      - "--region=asia-south1"
+      - "--platform=managed"
+      - "--allow-unauthenticated"
+      - "--clear-base-image"
+      - "--update-env-vars=FIREBASE_CREDENTIALS=$$FIREBASE_CREDS,FIREBASE_STORAGE_BUCKET=$$FIREBASE_BUCKET"
     secretEnv: ["FIREBASE_CREDS", "FIREBASE_BUCKET"]
-    id: "deploy-to-cloud-run"
 
-# Access secrets from Secret Manager
 availableSecrets:
   secretManager:
     - versionName: projects/$PROJECT_ID/secrets/firebase-credentials/versions/latest
@@ -45,14 +36,8 @@ availableSecrets:
     - versionName: projects/$PROJECT_ID/secrets/firebase-storage-bucket/versions/latest
       env: "FIREBASE_BUCKET"
 
-# Store the built images
 images:
   - "gcr.io/$PROJECT_ID/lodge-management:$COMMIT_SHA"
   - "gcr.io/$PROJECT_ID/lodge-management:latest"
-
-# Build options
-options:
-  logging: CLOUD_LOGGING_ONLY
-  machineType: "E2_HIGHCPU_8"
 
 timeout: "1200s"
