--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,27 +1,10 @@
 steps:
-  # Step 1: Build the container using Dockerfile
-  - name: "gcr.io/cloud-builders/docker"
-    args:
-      - "build"
-      - "-t"
-      - "gcr.io/$PROJECT_ID/lodge-management:$COMMIT_SHA"
-      - "-t"
-      - "gcr.io/$PROJECT_ID/lodge-management:latest"
-      - "."
-
-  # Step 2: Push the container to Container Registry
-  - name: "gcr.io/cloud-builders/docker"
-    args:
-      - "push"
-      - "gcr.io/$PROJECT_ID/lodge-management:$COMMIT_SHA"
-
-  # Step 3: Deploy to Cloud Run (with --clear-base-image flag)
   - name: "gcr.io/cloud-builders/gcloud"
     args:
       - "run"
       - "deploy"
       - "lodge-management"
-      - "--image=gcr.io/$PROJECT_ID/lodge-management:$COMMIT_SHA"
+      - "--source=."
       - "--region=asia-south1"
       - "--platform=managed"
       - "--allow-unauthenticated"
@@ -35,9 +18,5 @@ availableSecrets:
       env: "FIREBASE_CREDS"
     - versionName: projects/$PROJECT_ID/secrets/firebase-storage-bucket/versions/latest
       env: "FIREBASE_BUCKET"
-
-images:
-  - "gcr.io/$PROJECT_ID/lodge-management:$COMMIT_SHA"
-  - "gcr.io/$PROJECT_ID/lodge-management:latest"
 
 timeout: "1200s"
